# EXAL_INTERNSHIP_CHALLENGE

./: baseline_metrics.csv  export_model.py  profile_model.py
Task_1_Baseline/: baseline_metrics.csv  export_model.py  profile_model.py
Task_2_Quantization/: README.md  calibration_reader.py  convert_fp16.py  evaluate_accuracy.py  mobilenet_v2_per_tensor.onnx
Task_3_CPP_Wrapper/: CMakeLists.txt  README.md  benchmark_log.txt  mobilenet_v2.onnx  mobilenet_v2_int8.onnx
Task_3_CPP_Wrapper/src/: infer.cpp
Task_4_Power_Latency/: engineering_decision_log.md  latency_results.csv  power_latency.py
Task_5_Federated_Learning/: fl_analysis.md  fl_flower.py  fl_global_int8.onnx  fl_results.csv  fl_summary.txt  fl_train.py  quantize_global.py
Task_6_Sensor_Fusion/: fusion_results.csv  kalman_fusion.py
